# network_pipeline

./: .gitignore  La Matanie_addresses.csv  La Matanie_ages.csv  La Matanie_arrondissements.csv  La Matanie_genres.csv  La Matanie_regions.csv  La Matanie_revenus.csv  La Matanie_villes.csv  Longueuil_addresses.csv  Longueuil_ages.csv  Longueuil_arrondissements.csv  Longueuil_genres.csv  Longueuil_regions.csv  Longueuil_revenus.csv  Longueuil_villes.csv  Montréal-Nord secteur Nord-Est_addresses.csv  Montréal-Nord secteur Nord-Est_ages.csv  Montréal-Nord secteur Nord-Est_arrondissements.csv  Montréal-Nord secteur Nord-Est_genres.csv  Montréal-Nord secteur Nord-Est_regions.csv  Montréal-Nord secteur Nord-Est_revenus.csv  Montréal-Nord secteur Nord-Est_villes.csv  Montréal-Nord_addresses.csv  Montréal-Nord_ages.csv  Montréal-Nord_arrondissements.csv  Montréal-Nord_genres.csv  Montréal-Nord_regions.csv  Montréal-Nord_revenus.csv  Montréal-Nord_villes.csv  Portneuf_addresses.csv  Portneuf_ages.csv  Portneuf_arrondissements.csv  Portneuf_genres.csv  Portneuf_regions.csv  Portneuf_revenus.csv  Portneuf_villes.csv  README.md  Rimouski-Neigette_addresses.csv  Rimouski-Neigette_ages.csv  Rimouski-Neigette_arrondissements.csv  (+75 more)
accorderie_sherbrooke/: transactions.csv
analysis/: file_generator.py  graph_loader.py  main.py
cli/: pipeline.py
common/: graph_loader.py  requirements.txt
graph_common/: file_handler.py  graph_loader.py  setup.cfg  utils.py
graph_common/src/: constants.py  file_handler.py
graph_common/src/graph_common.egg-info/: PKG-INFO  SOURCES.txt
(+282 files in other folders)
