[metadata]
name = graph_common
version = 0.3
author = luc
author_email = bugl2301@usherbrooke.ca
description = Common functions
long_description =  file: README.md
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent

[options]
packages = find:
python_requires = >=3.7
include_package_data = True

[options.packages.find]
where = src

